--- a/web2py/applications/menuet/views/admin/db_operations.html
+++ b/web2py/applications/menuet/views/admin/db_operations.html
@@ -1,5 +1,5 @@
 {{extend "layout.html"}}
 
-        <div class="card-deck">
-            {{include "tagEdit.html"}}
+        <div class="card card-deck">
+            {{include "admin/tagEdit.html"}}
         </div>
