--- a/web2py/applications/menuet/views/admin/tagEdit.html
+++ b/web2py/applications/menuet/views/admin/tagEdit.html
@@ -1,12 +1,19 @@
-<div class="card-header">
-    <label class="font-weight-bold">Bulk search and add tags</label>
+<div class="col-sm-2">
+    <div class="card-block">
+        <div class="card-header">
+            <label class="font-weight-bold">Bulk search and add tags</label>
+        </div>
+    <div class="card-body">
+
+    </div>
+        <div class="card-footer">
+            <input value="Search and add tags" class="btn btn-success" type="button" onclick="search_add_tags()">
+        </div>
+    </div>
 </div>
-<div class="card-footer">
-    <input value="Search and add tags" class="btn btn-success" type="button" onclick="search_add_tags()">
-</div>
-        <script type="application/javascript">
-            function search_add_tags() {
-                
-            }
-        </script>
+<script type="application/javascript">
+    function search_add_tags() {
+
+    }
+</script>
         
