--- a/web2py/applications/menuet/views/default/admin_area.html
+++ b/web2py/applications/menuet/views/default/admin_area.html
@@ -52,6 +52,7 @@
                 <b>DB operations</b>
             </div>
             <div class="card-block">
+                <input type="button" onclick="window.location='{{=URL('admin', 'db_operations')}}'" class="btn btn-danger" value="Bulk DB operations">
                 <button class="btn btn-primary" onclick="do_parse_ingr()" type="button">
                     <i class="" id="parse_icon"></i>Parse ingrs and add them to the items
                 </button>
