--- a/web2py/applications/menuet/views/admin/tagEdit.html
+++ b/web2py/applications/menuet/views/admin/tagEdit.html
@@ -3,17 +3,40 @@
         <div class="card-header">
             <label class="font-weight-bold">Bulk search and add tags</label>
         </div>
-    <div class="card-body">
+        <div class="card-body">
 
-    </div>
+        </div>
         <div class="card-footer">
+            <label class="font-weight-bold" for="search_for">What to search in item name? comma separated</label>
+            <input class="form-control" type="text" id="search_for">
+            <label class="font-weight-bold" for="search_for">Which tags to add? comma separated</label>
+
+            <input class="form-control" type="text" id="add_tags">
             <input value="Search and add tags" class="btn btn-success" type="button" onclick="search_add_tags()">
         </div>
     </div>
 </div>
 <script type="application/javascript">
     function search_add_tags() {
+        var search_for = document.getElementById('search_for').value;
+        var add_tags = document.getElementById('add_tags').value;
+        var DTO = {'s': search_for, 't': add_tags};
+        var data = JSON.stringify(DTO);
 
+        $.ajax({
+            type: 'POST',
+            url: '/menuet/admin/add_tags',
+            scriptCharset: "utf-8",
+            contentType: "application/json; charset=utf-8",
+            data: data,
+            dataType: 'text',
+            success: function (data) {
+                location.reload();
+            },
+            error: function () {
+                location.reload();
+            }
+        });
     }
 </script>
         
