--- a/web2py/applications/menuet/views/core/e_menu.html
+++ b/web2py/applications/menuet/views/core/e_menu.html
@@ -12,7 +12,7 @@
                         <h1>{{=menu.f_name}}</h1>
                         <br>
                         <p>
-                            <em class="text-muted">
+                            <em class="text-muted">tags:
                             {{for tag in tags:}}
                             {{=tag.f_name}};
                             {{pass}}
@@ -65,11 +65,11 @@
                 <tr>
                     <td>
                     {{=item.name}}
-                        <p><em class="text-muted">{{for tag in item.tags:}}{{=tag}};{{pass}}</em></p>
+                        <p><em class="text-muted">tags:{{for tag in item.tags:}}{{=tag}};{{pass}}</em></p>
                     </td>
                     <td>
                     {{=item.desc}}<br>
-                        <p><em class="text-muted">
+                        <p><em class="text-muted">ingrs:
                         {{for ingr in item.ingrs:}}
                         {{=ingr.name}};
                         {{pass}}
