--- a/web2py/applications/menuet/views/admin/db_operations.html
+++ b/web2py/applications/menuet/views/admin/db_operations.html
@@ -1,5 +1,7 @@
 {{extend "layout.html"}}
 
-        <div class="card card-deck">
-            {{include "admin/tagEdit.html"}}
-        </div>
+<div class="card card-deck">
+{{include "admin/tagEdit.html"}}
+{{include "admin/ingrsCurate.html"}}
+
+</div>
