--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -136,13 +136,13 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="font-weight-bold">Наименование</label>
+                        <label class="font-weight-bold">Наименование меню</label>
 
-                        <input class="form-control" name="menu_name" placeholder="Наименование меню" id="menu_name"
+                        <input class="form-control" name="menu_name" placeholder="... если есть" id="menu_name"
                                type="text">
                     </div>
                     <div class="form-group">
-                        <label class="font-weight-bold">Тэги</label>
+                        <label class="font-weight-bold">Тэги (через ЗПТ)</label>
 
                         <textarea class="form-control" name="menu_tags" placeholder="Завтрак, острое..." id="menu_tags"
                                   type="text"></textarea>
