--- a/web2py/applications/menuet/views/core/e_menu.html
+++ b/web2py/applications/menuet/views/core/e_menu.html
@@ -71,7 +71,7 @@
                     {{=item.desc}}<br>
                         <p><em class="text-muted">ingrs:
                         {{for ingr in item.ingrs:}}
-                        {{=ingr.name}};
+                        {{=ingr}};
                         {{pass}}
                         </em></p>
                     </td>
