--- a/web2py/applications/menuet/views/admin/db_operations.html
+++ b/web2py/applications/menuet/views/admin/db_operations.html
@@ -3,5 +3,7 @@
 <div class="card card-deck">
 {{include "admin/tagEdit.html"}}
 {{include "admin/ingrsCurate.html"}}
+    {{include "admin/removeDuplicates.html"}}
+
 
 </div>
