--- a/web2py/applications/menuet/views/default/admin_area.html
+++ b/web2py/applications/menuet/views/default/admin_area.html
@@ -2,7 +2,7 @@
 
 
 <h1>Restaraunts</h1>
-<h2>{{=A("Add menu via json", _href=URL('default','jsn_menu'))}}</h2>
+<h2>{{=A("Update Database via JSON from data.mos.ru", _href=URL('default','jsn_menu'))}}</h2>
 <h2>{{=A("shkololo rest", _href=URL('core','rest'))}}</h2>
 <h2>{{=A("Users mgmt", _href=URL('default','users_m'))}}</h2>
 
