--- a/web2py/applications/menuet/views/core/menus.html
+++ b/web2py/applications/menuet/views/core/menus.html
@@ -63,7 +63,7 @@
             dataType: 'json',
             data: data,
             success: function (data) {
-                // window.location.reload()
+                window.location.reload()
             },
             error: function (data) {
                 window.location.reload()
